--- a/front/public/index.html
+++ b/front/public/index.html
@@ -2,7 +2,7 @@
 <html lang="">
 
 <head>
-  <title>Brining</title>
+  <title>Braining</title>
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
